# stitchyai

./: .editorconfig  .gitignore  ARCHITECTURE.md  README.md  theme-proposals.html
.claude/: launch.json  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  backfill_customer_profiles.sql  docker-compose.yml  migrate_0004_manual.sql  migrate_catchup_to_head.sql  pyproject.toml  schema.sql  seed.py  test_data.sql
backend/alembic/: env.py
backend/alembic/versions/: 0002_ai_generation_tables.py  0003_confirmed_status_and_interest_date.py  0004_subscriptions_and_credits.py  0005_phone_nullable.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  plans.py  security.py
backend/app/models/: __init__.py  admin.py  ai_generation.py  catalog.py  credit.py  delivery.py  notification.py  order.py  payment.py  tailor.py  user.py
backend/app/modules/admin/: repository.py  router.py  schemas.py  service.py
backend/app/modules/ai/: __init__.py  celery_client.py  internal_router.py  repository.py  router.py  s3_service.py  schemas.py  service.py
backend/app/modules/auth/: firebase_provider.py  otp_provider.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/catalog/: repository.py  router.py  schemas.py  service.py
backend/app/modules/credits/: router.py  schemas.py  service.py
backend/app/modules/delivery/: repository.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: repository.py  router.py  schemas.py  service.py
backend/app/modules/orders/: repository.py  router.py  schemas.py  service.py
backend/app/modules/payments/: repository.py  router.py  schemas.py  service.py
backend/app/modules/reports/: repository.py  router.py  schemas.py  service.py
backend/app/shared/: base_model.py  dependencies.py  pagination.py
backend/tests/: conftest.py  test_health.py  test_plans.py
(+162 files in other folders)
