[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thugil-api"
version = "0.1.0"
description = "Thugil Designers — API service"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thugil Designers" }]
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "razorpay>=1.4",
    "boto3>=1.34",
    "celery>=5.3",
    "Pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "types-passlib",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "N",               # naming
    "ASYNC",           # async best practices
    "SIM",             # simplifications
]
ignore = ["E501"]      # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# _LocalS3 stub mirrors boto3's API which uses PascalCase argument names
"app/modules/ai/s3_service.py" = ["N803"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
